[tool.poetry]
name = "Dragons"
version = "0.1.0"
description = "Dragon names generator"
authors = ["Andrey Goryachev <raikslerx@gmail.com>"]
license = "Public domain"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
